# neural-network-cpp

./: CMakeLists.txt  main.cpp
include/: network.h
src/: main.cpp
